Overflow fixes for mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,4 +24,5 @@ html, body {
     font-family: "BalsamiqSans-Regular";
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
